# invenio-records-permissions

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  MANIFEST.in  README.rst  pyproject.toml  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml
docs/: api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  usage.rst
invenio_records_permissions/: __init__.py  api.py  config.py  errors.py  ext.py  generators.py
invenio_records_permissions/policies/: __init__.py  base.py  records.py
invenio_records_permissions/translations/: messages.pot
invenio_records_permissions/translations/fi/LC_MESSAGES/: messages.po
invenio_records_permissions/translations/zh-Hant/LC_MESSAGES/: messages.po
tests/: conftest.py  test_composite_generator.py  test_generators.py  test_invenio_records_permissions.py  test_permissions_base.py  test_permissions_records.py  test_record_permission_policy.py  test_same_as_generator.py
